<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="mr_media_route_button_content_description">Cast</string>
    <string name="mr_media_route_chooser_searching">Searching for devices…</string>
    <string name="mr_media_route_chooser_title">Connect to device</string>
    <string name="accesibility_add_to_my_list">Add to My List</string>
    <string name="button_message_download">Download</string>
    <string name="description_cs_dialer_pad_0">0</string>
    <string name="description_cs_dialer_pad_1">1</string>
    <string name="description_cs_dialer_pad_2">2</string>
    <string name="description_cs_dialer_pad_3">3</string>
    <string name="description_cs_dialer_pad_4">4</string>
    <string name="description_cs_dialer_pad_5">5</string>
    <string name="description_cs_dialer_pad_6">6</string>
    <string name="description_cs_dialer_pad_7">7</string>
    <string name="description_cs_dialer_pad_8">8</string>
    <string name="description_cs_dialer_pad_9">9</string>
    <string name="description_cs_dialer_pad_pound">pound</string>
    <string name="description_cs_dialer_pad_star">star</string>
    <string name="label_about">About</string>
    <string name="label_account">Account</string>
    <string name="label_bootParams">Bootloader parameters</string>
    <string name="label_bootParams_summary">Add parameters to bootloader URL as they are entered. Entry will NOT be URL encoded!</string>
    <string name="label_bugreport">Bug Report</string>
    <string name="label_bugreport_summary">Click here to save logcat to file.</string>
    <string name="label_bw_automatic_header">Automatic</string>
    <string name="label_bw_header">Cellular Data Usage</string>
    <string name="label_bw_header_detail_def">Automatic (Default data &amp; quality setting)</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_castappid_summary">Restart application for the change to take effect. Current ApplicationId:</string>
    <string name="label_castappid_title">Cast ApplicationId</string>
    <string name="label_could_not_load_data">"Can't Connect to Netflix"</string>
    <string name="label_cs_dialer_pad_0">0</string>
    <string name="label_cs_dialer_pad_1">1</string>
    <string name="label_cs_dialer_pad_2">2</string>
    <string name="label_cs_dialer_pad_3">3</string>
    <string name="label_cs_dialer_pad_4">4</string>
    <string name="label_cs_dialer_pad_5">5</string>
    <string name="label_cs_dialer_pad_6">6</string>
    <string name="label_cs_dialer_pad_7">7</string>
    <string name="label_cs_dialer_pad_8">8</string>
    <string name="label_cs_dialer_pad_9">9</string>
    <string name="label_debug">[DEBUG]</string>
    <string name="label_device">Device</string>
    <string name="label_diagnostics">Diagnostics</string>
    <string name="label_force_swvideo_title">Force VP9 Software Decoder</string>
    <string name="label_more_info">More Info</string>
    <string name="label_network">Network</string>
    <string name="label_ok">OK</string>
    <string name="label_open_source_licenses">Open Source Licenses</string>
    <string name="label_play_now">Play Now</string>
    <string name="label_play_trailer">Play trailer</string>
    <string name="label_playeroverlay_enable">Enable player debug data</string>
    <string name="label_playeroverlay_summary">If you want to see playback metadata during playback.</string>
    <string name="label_pref_settings_category_downloads">Downloads</string>
    <string name="label_pref_settings_category_legal">Legal</string>
    <string name="label_pref_settings_category_notification">Notifications</string>
    <string name="label_pref_settings_category_playback">Video Playback</string>
    <string name="label_pref_settings_category_qa">QA</string>
    <string name="label_pref_settings_downloads_remove_all">Remove All Downloads</string>
    <string name="label_pref_settings_legal_terms_of_use">Terms of Use</string>
    <string name="label_pref_settings_notification_enable">Accept push notifications</string>
    <string name="label_pref_settings_notification_enable_summary">Notifications may include newly-added movies, TV shows, personalized suggestions or other notices</string>
    <string name="label_pref_settings_privacy_policy">Privacy</string>
    <string name="label_pref_settings_privacy_policy_cookies">Cookie Preferences</string>
    <string name="label_pref_settings_wifi_warning_title">Wi-Fi Only</string>
    <string name="label_reset_uibootloader">Reset bootloader URL</string>
    <string name="label_reset_uibootloader_summary">Click here to reset bootloader URL to default</string>
    <string name="label_retry">Retry</string>
    <string name="label_select_videoformat_summary">VP9 and HEVC only available for selected video</string>
    <string name="label_select_videoformat_title">Offline Video Format</string>
    <string name="label_site">Site</string>
    <string name="label_site_summary">Click here to change link to UI.</string>
    <string name="offline_action_cancel_download">Cancel Download</string>
    <string name="offline_action_delete_download">Delete Download</string>
    <string name="offline_action_pause_download">Pause All</string>
    <string name="offline_action_play">Play</string>
    <string name="offline_action_resume_download">Resume All</string>
    <string name="offline_action_view_my_downloads">View My Downloads</string>
    <string name="offline_message_quality_standard">Standard</string>
    <string name="offline_message_quality_title">Download Video Quality</string>
    <string name="icon_font_add_to_list"></string>
    <string name="label_cs_dialer_pad_0_desc">"+ "</string>
    <string name="label_cs_dialer_pad_2_desc">ABC</string>
    <string name="label_cs_dialer_pad_3_desc">DEF</string>
    <string name="label_cs_dialer_pad_4_desc">GHI</string>
    <string name="label_cs_dialer_pad_5_desc">JKL</string>
    <string name="label_cs_dialer_pad_6_desc">MNO</string>
    <string name="label_cs_dialer_pad_7_desc">PQRS</string>
    <string name="label_cs_dialer_pad_8_desc">TUV</string>
    <string name="label_cs_dialer_pad_9_desc">WXYZ</string>
    <string name="label_cs_dialer_pad_no_desc">" "</string>
    <string name="label_cs_dialer_pad_pound_desc">\#</string>
    <string name="label_cs_dialer_pad_star_desc">*</string>
    <string name="label_disable_cronet_and_use_android_http_stack_summary">Disable Cronet and Use Android Http Stack</string>
    <string name="label_enables_pin_checking_for_download_and_play">Enables PIN checks for download and offline/streaming playback.</string>
    <string name="label_force_pin_check">PIN checking</string>
    <string name="label_subtitleConfiguration">Subtitle Configuration</string>
    <string name="label_subtitleConfiguration_summary">You can select any subtitle configuration.</string>
    <string name="label_use_android_http_stack">Use Android HttpStack</string>
    <string name="settings_key_open_source_licenses">settings_key_open_source_licenses</string>
</resources>