<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout id="@id/billboard_portrait_button_group" paddingBottom="14.0dip" layout_width="fill_parent" layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <o.DayPickerViewPager textSize="54.0sp" textColor="@color/translucent_white_80" id="@id/billboard_portrait_add_to_queue" background="@drawable/selectable_video_background_with_press" focusable="true" visibility="gone" clickable="true" layout_width="wrap_content" layout_height="wrap_content" text="@string/icon_font_add_to_list" layout_centerVertical="true" contentDescription="@string/accesibility_add_to_my_list" layout_marginStart="30.0dip" layout_alignParentStart="true" />
    <o.HorizontalScrollView id="@id/billboard_cta1_portrait_button" visibility="gone" layout_width="wrap_content" layout_height="38.0dip" text="@string/label_play_now" drawablePadding="10.0dip" layout_centerHorizontal="true" layout_centerVertical="true" contentDescription="@string/label_play_now" drawableStart="@drawable/APKTOOL_DUMMY_404" style="@style/NetflixButton.White" />
    <o.HorizontalScrollView id="@id/billboard_cta2_portrait_button" visibility="gone" text="@string/label_play_trailer" drawablePadding="10.0dip" contentDescription="@string/label_play_now" drawableStart="@drawable/APKTOOL_DUMMY_404" style="@style/NetflixButton.White" />
    <o.HorizontalScrollView id="@id/billboard_portrait_info_button" visibility="gone" text="@string/label_more_info" contentDescription="@string/label_more_info" layout_alignEnd="@id/billboard_cta1_portrait_button" style="@style/NetflixButton.Outline" />
    <ImageView id="@id/billboard_portrait_view_info" background="@drawable/selectable_video_background_with_press" focusable="true" visibility="gone" clickable="true" layout_width="30.0dip" layout_height="30.0dip" src="@drawable/ic_cw_info_billboard" layout_centerVertical="true" layout_marginEnd="37.0dip" layout_alignParentEnd="true" />
</RelativeLayout>